@startuml architecture_diagram

top to bottom direction
skinparam componentStyle rectangle
skinparam shadowing false
skinparam roundcorner 8

skinparam component {
    BackgroundColor white
    BorderColor #444444
    ArrowColor #333333
}
skinparam package {
    BackgroundColor #fafafa
    BorderColor #aaaaaa
    FontStyle bold
}
skinparam interface {
    BackgroundColor #e8f4fb
    BorderColor #2980b9
}
skinparam nodesep 50
skinparam ranksep 40

' ── Entry Point ──────────────────────────────────
package "Entry Point" {
    component "main.cpp" as Main
    note right of Main
        Argumente:
        - -producer | - -consumer
        - -transport pipe  (Standard)
        [pipe_name]  (optional)
    end note
}

' ── Factory Layer ────────────────────────────────
package "Factory Layer" {
    interface "IIPCFactory" as IFactory
    component "PipeIPCFactory" as PipeFactory
    PipeFactory -up-> IFactory : implements
}

' ── Business Logic ───────────────────────────────
package "Business Logic" {
    component "Producer\n(Pipe Server)" as Producer
    component "Consumer\n(Pipe Client)" as Consumer

    note right of Producer
        cComponents / cSeverities / cMessages
        als static constexpr arrays
    end note

    note right of Consumer
        Statistics { warningCount,
          errorCount, componentSeverityCount }
        Statusausgabe alle 5 s
    end note
}

' ── IPC Abstraction ──────────────────────────────
package "IPC Abstraction" {
    interface "IIPCWriter" as IWriter
    interface "IIPCReader" as IReader
}

' ── Serialization ────────────────────────────────
package "Serialization" {
    interface "IEventSerializer" as ISerializer
    component "EventSerializer\n(hand-rolled JSON)" as Serializer
    Serializer -up-> ISerializer : implements
}

' ── Domain ───────────────────────────────────────
package "Domain" {
    component "Event\n{ timestamp, component,\n  severity, message }" as EventModel
    component "Severity\n(INFO / WARNING / ERROR)" as Severity
    EventModel --> Severity
}

' ── Platform IPC ─────────────────────────────────
package "Platform IPC Implementation" {
    component "IPCWriter\nWindows: CreateNamedPipeA\nLinux:   mkfifo + open(O_WRONLY)" as IPCWriter
    component "IPCReader\nWindows: CreateFileA\nLinux:   open(O_RDONLY | O_NONBLOCK)" as IPCReader
    component "PipeDisconnectedException" as PipeEx

    IPCWriter -up-> IWriter : implements
    IPCReader -up-> IReader : implements
    IPCReader ..> PipeEx    : <<throws>>
}

' ── Relationships ────────────────────────────────

Main     -down-> IFactory       : createFactory(transport)
Main     -down-> Producer       : runProducer(name, factory)
Main     -down-> Consumer       : runConsumer(name, factory)

IFactory -down-> IWriter        : createWriter()
IFactory -down-> IReader        : createReader()
PipeFactory ..> IPCWriter       : <<creates>>
PipeFactory ..> IPCReader       : <<creates>>

Producer -down-> IWriter        : write(json)
Producer -down-> ISerializer    : serialize(Event)
Producer ..> EventModel         : generates

Consumer -down-> IReader        : read(json)
Consumer -down-> ISerializer    : deserialize(json)
Consumer ..> EventModel         : processes
Consumer ..> PipeEx             : catches

@enduml
